Fixed bolding and weird spacing on mobile

--- a/main.css
+++ b/main.css
@@ -213,3 +213,4 @@ a{
     color: var(--white);
 }
 
+* {-webkit-font-smoothing: antialiased;}
